--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   fluttertoast: ^8.0.7
 #  toast: ^0.1.5
 
+  # State Management
+  flutter_bloc: ^7.2.0
+
 dev_dependencies:
   flutter_native_splash: ^0.1.4
   flutter_test:
