--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
 
   # State Management
   flutter_bloc: ^7.2.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_native_splash: ^0.1.4
